[project]
name = "bay-wheels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Isom", email = "hi@maxisom.me" }
]
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.6.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
